--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -203,9 +203,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "cv-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
