new connection error rectified

--- a/cv-env.ipynb
+++ b/cv-env.ipynb
@@ -2,6 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import socket"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = socket.socket()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.connect(('www.google.com', 80))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<AddressFamily.AF_INET6: 23>, 0, 0, '', ('::1', 8080, 0, 0)),\n",
+       " (<AddressFamily.AF_INET: 2>, 0, 0, '', ('127.0.0.1', 8080))]"
+      ]
+     },
+     "execution_count": 234,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "socket.getaddrinfo('localhost', 8080)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
@@ -24,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +80,6 @@
     "\n",
     "face_api_url = 'https://southeastasia.api.cognitive.microsoft.com/face/v1.0/detect'\n",
     "\n",
-    "# image_url = 'https://upload.wikimedia.org/wikipedia/commons/3/37/Dagestani_man_and_woman.jpg'\n",
     "\n",
     "headers = {'Content-Type': 'application/octet-stream', \n",
     "           'Ocp-Apim-Subscription-Key': subscription_key}\n",
@@ -47,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,40 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.post(face_api_url,params=params, headers=headers, data = data)"
+    "\n",
+    "response = requests.post(face_api_url,params=params, headers=headers, data = data,timeout=0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = response.json()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(data)"
+    "data2 = response.json()"
    ]
   },
   {
