face identify api test v1

--- a/cv-env.ipynb
+++ b/cv-env.ipynb
@@ -2,55 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import socket"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 232,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = socket.socket()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s.connect(('www.google.com', 80))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(<AddressFamily.AF_INET6: 23>, 0, 0, '', ('::1', 8080, 0, 0)),\n",
-       " (<AddressFamily.AF_INET: 2>, 0, 0, '', ('127.0.0.1', 8080))]"
-      ]
-     },
-     "execution_count": 234,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "socket.getaddrinfo('localhost', 8080)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,14 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "camera = cv2.VideoCapture(0)\n",
-    "return_value, image = camera.read()\n",
-    "cv2.imwrite('opencv'+'test'+'.jpeg', image)\n",
-    "del(camera)"
+    "def take_picture():\n",
+    "    camera = cv2.VideoCapture(0)\n",
+    "    return_value, image = camera.read()\n",
+    "    cv2.imwrite('opencv'+'test'+'.jpeg', image)\n",
+    "    del(camera)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "face_api_url = 'https://southeastasia.api.cognitive.microsoft.com/face/v1.0/'"
    ]
   },
   {
@@ -108,7 +70,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "response = requests.post(face_api_url,params=params, headers=headers, data = data,timeout=0.5)"
    ]
   },
